--- a/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.scss
+++ b/sourse/pug/blocks/sServiceCenterHead/_sServiceCenterHead.scss
@@ -44,6 +44,7 @@
 		input {
 			border-radius: rem(100);
 			background-color: $gray-910;
+			color: $white;
 		}
 		button {
 			position: absolute;
