--- a/sourse/pug/blocks/sServicesList/_sServicesList.pug
+++ b/sourse/pug/blocks/sServicesList/_sServicesList.pug
@@ -58,7 +58,7 @@ mixin sServicesList(data)
 									+e.number(href="tel:+74956650232") +7 (495) 665-02-32
 									+e.number(href="tel:+74959169131") +7 (495) 916-91-31
 				.col-12.col-xl-6
-					+e.card
+					+e.card--indent-2
 						+pic('servicesCard-bg-4.png', '', 0)
 						+e.wrap
 							+e.content
