--- a/sourse/pug/blocks/header/_header.scss
+++ b/sourse/pug/blocks/header/_header.scss
@@ -33,6 +33,9 @@
 .brands{
 	// @include mt;
 	z-index: -1;
+	// @include media-breakpoint-up(md) {
+	// 	pointer-events: none;
+	// }
 }
 
 .catalog-dd{
