--- a/sourse/pug/blocks/sContactInfo/_sContactInfo.pug
+++ b/sourse/pug/blocks/sContactInfo/_sContactInfo.pug
@@ -6,8 +6,8 @@ mixin sContactInfo(data)
 				.col-lg
 					+e.bg.bg-wrap
 						<picture class="picture-bg"> 
-							<source type="image/avif" srcset="img/@2x/avif/sContactInfo-bg.avif" media="(min-width:576px)">
-							<source type="image/avif" srcset="img/@1x/avif/sContactInfo-bg.avif">
+							//- <source type="image/avif" srcset="img/@2x/avif/sContactInfo-bg.avif" media="(min-width:576px)">
+							//- <source type="image/avif" srcset="img/@1x/avif/sContactInfo-bg.avif">
 							<source type="image/webp" srcset="img/@2x/webp/sContactInfo-bg.webp" media="(min-width:576px)">
 							<source type="image/webp" srcset="img/@1x/webp/sContactInfo-bg.webp">
 							<source type="image/jpg" srcset="img/@2x/avif/sContactInfo-bg.jpg" media="(min-width:576px)">
