--- a/sourse/pug/blocks/sContactInfo/_sContactInfo.pug
+++ b/sourse/pug/blocks/sContactInfo/_sContactInfo.pug
@@ -10,8 +10,7 @@ mixin sContactInfo(data)
 							//- <source type="image/avif" srcset="img/@1x/avif/sContactInfo-bg.avif">
 							<source type="image/webp" srcset="img/@2x/webp/sContactInfo-bg.webp" media="(min-width:576px)">
 							<source type="image/webp" srcset="img/@1x/webp/sContactInfo-bg.webp">
-							<source type="image/jpg" srcset="img/@2x/avif/sContactInfo-bg.jpg" media="(min-width:576px)">
-							<source type="image/jpg" srcset="img/@1x/avif/sContactInfo-bg.jpg"><img src="img/@2x/sContactInfo-bg.jpg" alt="">
+							<img src="img/@2x/sContactInfo-bg.jpg" alt="">
 						</picture>
 				+e.col.col-lg-auto
 					+e.item
