--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -139,6 +139,14 @@
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
+.icon-pay-1 {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(22,16)*1em;
+}
+.icon-pay-2 {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-pay-icon {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
