--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -79,6 +79,10 @@
 	font-size:math.div(8,10)*1rem;
 	width: math.div(8,8)*1em;
 }
+.icon-disLike {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
+}
 .icon-dots {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
@@ -126,6 +130,10 @@
 .icon-inst {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-like {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
 }
 .icon-location {
 	font-size:math.div(16,10)*1rem;
@@ -182,6 +190,10 @@
 .icon-sort-order {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
+}
+.icon-star {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(17,16)*1em;
 }
 .icon-telegram {
 	font-size:math.div(48,10)*1rem;
