--- a/sourse/pug/blocks/sProdCard/_sProdCard.pug
+++ b/sourse/pug/blocks/sProdCard/_sProdCard.pug
@@ -247,6 +247,8 @@ mixin reviews()
 			+e.how-much 9 отзывов
 		+e.btn(href="#").btn оставить отзыв
 		+reviewsItem()
+		+reviewsItem()
+		+e.showMore(href="#").btn.btn-outline-white Показать еще
 
 mixin reviewsItem()
 	+e.item
