--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -95,11 +95,23 @@ mixin modal()
 		.h1 Оставить отзыв
 		+e.stars
 			p Оценка
-			+icon('star').active
-			+icon('star').active
-			+icon('star').active
-			+icon('star').active
-			+icon('star')
+			//- +icon('star').active
+			//- +icon('star').active
+			//- +icon('star').active
+			//- +icon('star').active
+			//- +icon('star')
+			.rating__group
+				input#mood-1.rating__input(type='radio' name='mood' value='1')
+				label.rating__star(for='mood-1' aria-label='Ужасно')
+				input#mood-2.rating__input(type='radio' name='mood' value='2')
+				label.rating__star(for='mood-2' aria-label='Сносно')
+				input#mood-3.rating__input(type='radio' name='mood' value='3' checked='')
+				label.rating__star(for='mood-3' aria-label='Нормально')
+				input#mood-4.rating__input(type='radio' name='mood' value='4')
+				label.rating__star(for='mood-4' aria-label='Хорошо')
+				input#mood-5.rating__input(type='radio' name='mood' value='5')
+				label.rating__star(for='mood-5' aria-label='Отлично')
+				.rating__focus
 		+form-wrap
 			+e.row.row
 				.col-12
