--- a/sourse/pug/blocks/sContent/_sContent.scss
+++ b/sourse/pug/blocks/sContent/_sContent.scss
@@ -31,8 +31,47 @@
 				}
 			}
 		} 
+		th{
+			font-size: rem(18);
+			color: #131313;
+			font-weight: 500;
+			background: #F3F3F3;
+			position: relative;
+			&::before{
+					content: '';
+					background: #FF8651;
+					width: 40px;
+					height: 4px;
+					position: absolute;
+					left:30;
+					top: rem(0);
+				}
+		}
+		td{
+			font-size: rem(16);
+			color: #3F3F3F;
+			font-weight: 400;
+			border-bottom: 1px solid #E2E2E2;
+		}
 
-
+		th, td{
+			padding-left: rem(30);
+			padding-top: rem(18);
+			padding-bottom: rem(20);
+			vertical-align: top
+			
+		}
+		thead tr{
+			box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.15);
+		}	
+		&__table-wrap{
+			overflow-x: auto;
+			position: relative;
+			margin-bottom: 1rem;
+		}
+		table{
+			min-width: 1200px;
+		}
 
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
