--- a/sourse/pug/blocks/sCompare/_sCompare.pug
+++ b/sourse/pug/blocks/sCompare/_sCompare.pug
@@ -50,8 +50,7 @@ mixin sCompare(data)
 										+sCompareMainSlide({})
 								.swiper-scrollbar
 								+e.difference
-									+b.LABEL.custom-chb
-										input(type="checkbox" name='uniq' class="invisible" checked)
+									+b.custom-chb(href="#").active
 										span.square
 										span.txt Показывать только различия
 	// end sCompare
