--- a/sourse/pug/blocks/sDelivery/_sDelivery.scss
+++ b/sourse/pug/blocks/sDelivery/_sDelivery.scss
@@ -13,10 +13,20 @@
 	&__tabs-btn{
 		@extend .btn;
 		@extend .btn-primary;
-
+		[fill="white"] {
+			fill: currentColor !important;
+		}
+		img,
+		svg{
+			position: relative;
+			margin-right: rem(10);
+			// top: -4%;
+			transform: translateY(-4%);
+		}
 		padding: rem(6) rem(20);
 		font-size: rem(20);
 		line-height: calc(44/20);
+		
 
 		&:not(.active){
 			background: $gray-280!important;
@@ -239,7 +249,12 @@
 		}
 		svg{
 			@include mt();
-			path,rect,circle{
+			[stroke="#9B9B9B"],
+			[stroke="#FF8651"] { 
+				stroke: var(--h-col, #{$gray-530})!important;
+			}
+			[fill="#9B9B9B"],
+			[fill="#FF8651"] {  
 				fill: var(--h-col, #{$gray-530})!important;
 			}
 		}
@@ -356,5 +371,143 @@
 		@extend .btn-primary;
 		width: 100%;
 		text-transform: uppercase;
+	}
+}
+
+.pay-variant-content{
+	padding-left: rem(56);
+	ul{
+		list-style: none;
+		margin: 0 0 rem(16);
+
+		li{
+			line-height: calc(22/16);
+			display: block; 
+			position: relative;
+			margin-bottom: rem(15);
+			padding-left: rem(28);
+			img{
+				position: relative;
+				transform: translateY(-2%);
+				margin-right: rem(6);
+			}
+			strong{
+
+				font-weight: 500;
+			} 
+			&::before{
+				content: '';
+				background:#EEEEEE;
+				border-radius: 20px;
+				width: 8px;
+				height: 8px;
+				border-radius: 50%;
+				position: absolute;
+				left: 0;
+				top: rem(8);
+			}
+		}
+	} 
+}
+
+.parts-block{
+	max-width: 1000px;
+	.row{
+		align-items: start;
+		@include roww(46px);
+		p{
+			@include media-breakpoint-down(md) {
+				margin-left: -100px;
+			}
+		}
+	}
+	&__icon-wrap{
+		border-radius: 50%;
+		width: rem(70);
+		height: rem(70);
+		background: #EEEEEE;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: relative;
+		&::before{
+			content: '';
+			z-index: -1;
+			background: #EEEEEE;
+			@include a-cent1(y);
+			height: 1px;
+			width: 100vw;
+			right: -16px;
+		}
+		&::after{
+			content: '';
+			z-index: -1;
+			background: #EEEEEE;
+			@include a-cent1(y);
+			height: 1px;
+			right: -24px; 
+			width: 11px;
+			height: 11px;
+			border-radius: 50%;
+		}
+	}
+	&__title{
+		font-weight: 600;
+		font-size: 26px;
+		padding-top: 15px;
+		padding-bottom: 30px;
+	}
+}
+
+.step-item {
+	display: flex;
+	align-items: center;
+	font-weight: 600;
+	@include media-breakpoint-up(md) {
+
+		font-size: 26px;
+	}
+	font-size: 22px;
+	margin-bottom: 25px;
+	@include media-breakpoint-up(lg) {
+
+		margin-left: 116px;
+	}
+	position: relative;
+	&:not(:last-child)::before{
+		content: '';
+		// @include a-cent1(x);
+		position: absolute;
+		left: 43px;
+		height: 21px;
+		background-color: #353535;
+		width: 1px;
+		top: calc(100% + 1px);
+	}
+	
+	&__count{
+		position: relative;
+		@include media-breakpoint-up(md) {
+			margin-right: 30px;
+		}
+		margin-right: 20px;
+
+			width: 86px;
+			height: 86px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-weight: 900;
+		font-size: 32px;
+		
+		svg{
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			[fill='#FF8651'] {
+				stroke-dasharray: 100;
+				stroke-dashoffset: 20;
+			}
+		}
 	}
 }
