--- a/sourse/pug/blocks/sDelivery/_sDelivery.pug
+++ b/sourse/pug/blocks/sDelivery/_sDelivery.pug
@@ -27,7 +27,7 @@ mixin sDelivery2(data)
 					.col-auto
 						+e.tabs-btn.tabs__btn.active
 							img.img-svg-js(src="img/svg/icon-sber.svg", alt="")
-							| Способы доставки
+							| Плати со Сбером
 					.col-auto
 						+e.tabs-btn.tabs__btn 
 							img.img-svg-js(src="img/tin2.png", alt="")
