edit 035-installment-plan-by-sber page

--- a/sourse/pug/blocks/sDontCreatProblems/_sDontCreatProblems.pug
+++ b/sourse/pug/blocks/sDontCreatProblems/_sDontCreatProblems.pug
@@ -1,6 +1,6 @@
 mixin sDontCreatProblems(data)
 	// start sDontCreatProblems
-	+b.SECTION.sDontCreatProblems.section#sDontCreatProblems&attributes(attributes).bg-wrap
+	+b.sDontCreatProblems.section#sDontCreatProblems&attributes(attributes).bg-wrap
 		+img('img/@2x/lightBg.jpg', 'bg').picture-bg
 		+e.container.container
 			+e.row.row
