--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,9 +23,17 @@
 	font-size:math.div(10,10)*1rem;
 	width: math.div(14,10)*1em;
 }
+.icon-bill {
+	font-size:math.div(64,10)*1rem;
+	width: math.div(64,64)*1em;
+}
 .icon-btnLike {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-calendar-filled {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
 }
 .icon-call {
 	font-size:math.div(48,10)*1rem;
@@ -74,6 +82,10 @@
 .icon-contact-info-arrow {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(30,8)*1em;
+}
+.icon-credit-card-fill {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
 }
 .icon-cross {
 	font-size:math.div(8,10)*1rem;
@@ -151,6 +163,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-park-solid-bill {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
 .icon-parking {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
@@ -214,6 +230,10 @@
 .icon-tool-2 {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
+}
+.icon-wallet {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
 }
 .icon-whatsapp {
 	font-size:math.div(48,10)*1rem;
