--- a/sourse/pug/blocks/sHowToPay/_sHowToPay.pug
+++ b/sourse/pug/blocks/sHowToPay/_sHowToPay.pug
@@ -1,7 +1,7 @@
 mixin sHowToPay(data)
 	// start sHowToPay
 	+b.SECTION.sHowToPay.section#sHowToPay&attributes(attributes).bg-wrap
-		+img("img/@2x/sCertificates-head-1.jpg", 'bg').picture-bg
+		+pic("sCertificates-head-1.jpg", 'bg', 0).picture-bg
 		.container
 			h2 Как оплатить «Долями»?
 			+e.row.row
@@ -38,4 +38,23 @@ mixin sHowToPay2(data)
 				+item('1', '','Оформить кредит на&nbsp;сайте&nbsp;&mdash; легко и&nbsp;быстро.', 'При оформлении заказа в&nbsp;корзине укажите способ оплаты &laquo;Кредит&raquo; или &laquo;Рассрочка&raquo;')
 				+item('2', 'Вашу заявку рассмотрят в&nbsp;течение 20&ndash;30&nbsp;минут.','Вы&nbsp;будете перенаправлены на&nbsp;сайт банка для заполнения анкеты. После заполнения анкеты с&nbsp;вами свяжется представитель банка.')
 				+item('3', '','Пожалуйста, будьте готовы предоставить паспорт при получении кредита.', 'Также банки вправе потребовать иные дополнительные документы и&nbsp;подтверждение доходов заемщика.')
+	// end sHowToPay
+
+mixin sHowToPay3(data)
+	// start sHowToPay
+	+b.SECTION.sHowToPay--2.section#sHowToPay&attributes(attributes).bg-wrap
+		+pic("sCertificates-head-1.jpg", 'bg', 0).picture-bg
+		+e.container.container
+			h2 Покупка в&nbsp;рассрочку с&nbsp;сервисом Покупай со&nbsp;Сбером
+			+e.row.row
+				mixin item(num, ...texts)
+					+e.col.col-md-6.col-lg-3
+						+e.item--2
+							+e.num!= num
+							each text in texts
+								p!= text
+				+item('1', 'Выберите товар на&nbsp;сумму не&nbsp;менее 3000&nbsp;₽ и&nbsp;способ оплаты &laquo;В&nbsp;рассрочку через сервис Покупай со&nbsp;Сбером&raquo;.')
+				+item('2', 'Перейдите в&nbsp;личный кабинет СберБанк Онлайн, авторизуйтесь в&nbsp;системе и&nbsp;заполните заявку на&nbsp;получение кредита, которая будет рассмотрена в&nbsp;течение нескольких минут.')
+				+item('3', 'В&nbsp;случае одобрения кредита деньги будут автоматически перечислены на&nbsp;счет магазина.')
+				+item('4', 'Согласуйте комфортный способ и&nbsp;время доставки. Получите свой заказ.')
 	// end sHowToPay
