--- a/sourse/pug/blocks/sInstalments/_sInstalments.pug
+++ b/sourse/pug/blocks/sInstalments/_sInstalments.pug
@@ -1,7 +1,7 @@
 mixin sInstalments(data)
 	// start sInstalments
 	+b.SECTION.sInstalments.section#sInstalments&attributes(attributes)
-		+img("img/@2x/sCertificates-head-1.jpg", 'bg').picture-bg
+		+pic("sCertificates-head-1.jpg", 'bg', 0).picture-bg
 		+e.container.container
 			+e.row.row
 				.col-md-6.col-lg-5
@@ -13,14 +13,16 @@ mixin sInstalments(data)
 							li только в магазинах наших партнёров
 						p ЗВУЧИТ ЗАМАНЧИВО, НЕ ТАК ЛИ?
 				.col-md-6.col-lg-7
+					+e.img-bg
+						img(src="img/@2x/sInstalments-img-3.png", alt="")
 					+e.img-wrap
-						img(src="img/@2x/phone.png")
+						img(src="img/@2x/phone.png", alt="")
 	// end sInstalments
 
 mixin sInstalments2(data)
 	// start sInstalments
 	+b.SECTION.sInstalments--tinkoff.section#sInstalments&attributes(attributes)
-		+img("img/@2x/sCertificates-head-1.jpg", 'bg').picture-bg
+		+pic("sCertificates-head-1.jpg", 'bg', 0).picture-bg
 		+e.container.container
 			+e.row.row
 				.col-md-6.col-lg-4
@@ -30,21 +32,38 @@ mixin sInstalments2(data)
 						+e.btn(href="#").btn.btn-primary перейти к покупкам
 				.col-md-6.col-lg-8
 					+e.img-wrap-center
-						img(src="img/@2x/sInstalments-img-2.png")
+						img(src="img/@2x/sInstalments-img-2.png", alt="")
 	// end sInstalments
 
 mixin sInstalments3(data)
 	// start sInstalments
 	+b.SECTION.sInstalments--tinkoff.section#sInstalments&attributes(attributes)
-		+img("img/@2x/sCertificates-head-1.jpg", 'bg').picture-bg
+		+pic("sCertificates-head-1.jpg", 'bg', 0).picture-bg
 		+e.container.container
 			+e.row.row
-				.col-md-6.col-lg-5.col-xl-4
+				.col-md-6.col-lg-5.col-xl-6
 					+e.content
 						h1 Информация о рассрочке и кредите
 						+e.bank-name tinkoff
 						+e.btn(href="#").btn.btn-primary перейти к покупкам
-				.col-md-6.col-lg-7.col-xl-8
+				.col-md-6.col-lg-7.col-xl-6
 					+e.img-wrap-center
-						img(src="img/@2x/bg-tinkoff-logo.png").tinkoff-logo
+						img(src="img/@2x/bg-tinkoff-logo.png", alt="").tinkoff-logo
+	// end sInstalments
+
+mixin sInstalments4(data)
+	// start sInstalments
+	+b.SECTION.sInstalments--sber.section#sInstalments&attributes(attributes)
+		+pic("sCertificates-head-1.jpg", 'bg', 0).picture-bg
+		+e.container.container
+			+e.row.row
+				.col-md-6.col-lg-5
+					+e.content
+						h1 Покупай со Сбером в рассрочку
+						+e.text Не выходя из дома
+						+e.btn(href="#").btn.btn-primary перейти к покупкам
+						+img('img/@2x/sber-shield.png')
+				.col-md-6.col-lg-7
+					+e.img-wrap
+						img(src="img/@2x/sInstalments-img-1.png", alt="")
 	// end sInstalments
