--- a/sourse/pug/blocks/sInstalments/_sInstalments.scss
+++ b/sourse/pug/blocks/sInstalments/_sInstalments.scss
@@ -19,6 +19,9 @@
 		.sInstalments__row {
 			align-items: center;
 		}
+		.sInstalments__content {
+			max-width: rem(615);
+		}
 	}
 	&__container {
 		position: relative;
@@ -49,6 +52,15 @@
 				width: 100%;
 				max-width: rem(30);
 			}
+		}
+	}
+	&__img-bg {
+		position: absolute;
+    max-width: 806px;
+    bottom: -123px;
+		img {
+			max-width: 100%;
+			max-height: 100%;
 		}
 	}
 	&__content {
@@ -98,8 +110,12 @@
 		}
 	}
 	&__img-wrap {
+		max-height: rem(516);
+		z-index: 6;
+    position: relative;
 		@include media-breakpoint-down(md) {
 			text-align: center;
+			max-width: rem(245);
 		}
 		@include media-breakpoint-up(md) {
 			position: absolute;
@@ -108,9 +124,9 @@
 			top: 0;
 		}
 		img {
-			max-height: rem(516);
+			max-height: 100%;
 			@include media-breakpoint-down(md) {
-				max-width: rem(245);
+				max-width: 100%;
 			}
 		}
 	}
@@ -132,6 +148,42 @@
 			&.tinkoff-logo {
 				opacity: 0.1;
 				margin-bottom: -10px;
+			}
+		}
+	}
+	&--sber {
+		--sPB: #{rem(50)};
+		@include media-breakpoint-up(lg) {
+			--sPB: #{rem(155)};
+		}
+		.sInstalments__content {
+			max-width: rem(549);
+			position: relative;
+			img {
+				display: none;
+				position: absolute;
+				width: 100%;
+				max-width: rem(317);
+				@include media-breakpoint-up(sm) {
+					display: block;
+					right: -66px;
+   			 	top: 58px;
+				}
+				@include media-breakpoint-up(md) {
+					right: -220px;
+					top: 60px;
+				}
+			}
+		}
+		.sInstalments__img-wrap {
+			@include media-breakpoint-up(lg) {
+				top: 160px;
+			}
+			@include media-breakpoint-up(xl) {
+				top: 90px;
+			}
+			@include media-breakpoint-down(md) {
+				text-align: left;
 			}
 		}
 	}
