--- a/sourse/pug/blocks/sWeExplain/_sWeExplain.pug
+++ b/sourse/pug/blocks/sWeExplain/_sWeExplain.pug
@@ -11,7 +11,7 @@ mixin sWeExplain(data)
 					+e.col.col-md-6.col-lg-4
 						+e.img
 							+e.img-wrap
-								img(src=`img/@2x/sWeExplain-img-${img}.png`)
+								img(src=`img/@2x/sWeExplain-img-${img}.png`, alt="")
 						p!= text
 				+item('1', 'Когда товар уже в корзине, просто выберите способ оплаты «Плати частями»')
 				+item('2', 'Напишите номер телефона и карты, оплатите 25% от покупки и радуйтесь новым вещам')
